--- a/midterms/mid-act/package.json
+++ b/midterms/mid-act/package.json
@@ -5,6 +5,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "multer": "*"
   }
