--- a/midterms/EJS/package.json
+++ b/midterms/EJS/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
 }
