--- a/midterms/mid-exam/package.json
+++ b/midterms/mid-exam/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "node-starter",
-  "version": "0.0.0",
+  "name": "express-rest",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "multer": "*"
+    "multer": "^1.4.5-lts.1"
   }
 }
